--- a/script/Final_Viva-Yaohan.Rmd
+++ b/script/Final_Viva-Yaohan.Rmd
@@ -35,7 +35,7 @@ knitr::opts_chunk$set(
 options(scipen = 999)
 
 if(!require(pacman)){install.packages("pacman"); library(pacman)}
-p_load(tidyverse, sf, units, nngeo, tmap, tinytex, kableExtra, janitor, classInt,
+p_load(tidyverse, sf, units, nngeo, tmap, tinytex, kableExtra, janitor, classInt,lehdr,
        patchwork, here, tidycensus, lwgeom, lsr, haven, descr, RColorBrewer, stargazer,
        car, FNN, GGally, MASS, ISLR2, spdep, caret, ckanr, grid, gridExtra, ggcorrplot,
        jtools, broom, tufte, rmarkdown, corrr, RSocrata, viridis, spatstat, raster, knitr,
@@ -120,18 +120,28 @@ bike_rider_19_oct <- read_csv(here::here("data/final/201910-bluebikes-tripdata.c
 bike_stop <- read_csv(here::here("data/final/current_bluebikes_stations.csv"))
 
 
-# Bus Stop
+# Bus Data
+## Bus Stop
 bus_stop <- st_read(here::here("data/final/mbtabus/MBTABUSSTOPS_PT.shp")) %>%
   st_transform(crs = 2249)
 
 
-# MBTA Boundary
+# Other Data
+## MBTA Boundary
 mbta_core <- st_read(here::here("data/final/Core_Service_Area/Core_Service_Area.shp")) %>%
   st_transform(crs = 2249)
 ```
 
 
 # Data Wrangling
+
+## MBTA Boundary
+
+```{r boundary}
+mbta_core <- mbta_core %>%
+  st_union() %>%
+  st_as_sf()
+```
 
 ## Transit Data
 
@@ -438,14 +448,6 @@ bus_stop <- bus_stop %>%
   select(STOP_NAME) %>%
   rename(bus_stop = STOP_NAME) %>%
   distinct(bus_stop, .keep_all = TRUE)
-```
-
-## MBTA Boundary
-
-```{r boundary}
-mbta_core <- mbta_core %>%
-  st_union() %>%
-  st_as_sf()
 
 rm(list = setdiff(ls(), c("tran_line", "tran_stop", "tran_rider_17_period", "tran_rider_17_total",
                           "tran_rider_19_period", "tran_rider_19_total", "bike_rider_17_period",
@@ -453,61 +455,235 @@ rm(list = setdiff(ls(), c("tran_line", "tran_stop", "tran_rider_17_period", "tra
                           "bus_stop", "mbta_core")))
 ```
 
+## LEHD data
+
+```{r LEHD}
+# LEHD data - 2017
+job.2017 <- grab_lodes(state = "ma", year = 2017, 
+                    lodes_type = "wac", # wac, Workplace Area Characteristic data, jobs are totaled by work Census Block
+                    job_type = "JT01", #primary jobs
+                    segment = "S000", #total jobs
+                    state_part = "main", #both worklace and residence in-state
+                    agg_geo = "bg",
+                    download_dir = file.path("data/raw"))%>%
+  select(year,w_bg,C000)%>%
+  rename(job = C000)
+
+# LEHD data - 2019
+job.2019<- grab_lodes(state = "ma", year = 2019, 
+                    lodes_type = "wac", # wac, Workplace Area Characteristic data, jobs are totaled by work Census Block
+                    job_type = "JT01", #primary jobs
+                    segment = "S000", #total jobs
+                    state_part = "main", #both worklace and residence in-state
+                    agg_geo = "bg",
+                    download_dir = file.path("data/raw"))%>%
+  select(year,w_bg,C000)%>%
+  rename(job = C000)
+
+```
 ## ACS Data
 
-```{r acs}
-## Select Variables
-acs_vars_17 <- c("B01003_001E", # Total population
-                 ) 
+**Built Environment Variables**
+- Total population 
+- Population density 
+- Total Commuting Workers
+- Total Occupied House Unit 
+- Housing density 
+- Total Employment
+- Employment density
 
-acs_vars_19 <- c("B01003_001E", # Total population
-                 )
+- non-white share
+- commute in vehicles share
+- commute in bus share
+- commute by subway share
+- commute by rail share
+- commute by trolley share
+- commute by bike share
+- vehicle ownership for workers
+- household median income
+- poverty rate
+- labor force participation rate
+- employment rate
 
-## 2017
-acsTracts_2017 <- get_acs(geography = "tract",
-                             year = 2017,
-                             variables = acs_vars_17,
-                             geometry = TRUE,
-                             state = "Massachusetts",
-                             output = "wide") %>%
-  st_transform(st_crs(tran_stop)) %>%
-  select(GEOID, NAME, all_of(acs_vars_17)) %>%
-  rename(total_pop = B01003_001E)
+```{r acs.var}
+census_api_key("3ec2bee8c227ff3f9df970d0ffbb11ee1384076e", install = TRUE, overwrite = TRUE)
+readRenviron("~/.Renviron")
 
-## 2019
-acsTracts_2019 <- get_acs(geography = "tract",
-                             year = 2019,
-                             variables = acs_vars_19,
-                             geometry = TRUE,
-                             state = "Massachusetts",
-                             output = "wide") %>%
-  st_transform(st_crs(tran_stop)) %>%
-  select(GEOID, NAME, all_of(acs_vars_19)) %>%
-  rename(total_pop = B01003_001E)
+# get variables
+acs_variable_list.2017 <- load_variables(2017, "acs5")%>%
+  filter(geography == 'block group')
+
+acs.var <- c('B01001_001E',#total population
+             #-> non-white share
+             'B03002_003E',#White Non-Hispanic
+             #-> commute mode share
+             'B08301_001E',#Workers 16 years and over
+             'B08301_002E',#Car, truck, or van
+             'B08301_011E',#Bus
+             'B08301_012E',#Subway or elevated rail
+             'B08301_013E',#Long-distance train or commuter rail
+             'B08301_014E',#Streetcar or trolley car
+             'B08301_018E',#cyclists
+             'B08301_021E',#working form home
+             #-> vehicle ownership for household
+             'B25044_001E',#Occupied housing units
+             'B25044_003E',#No vehicle available for owned units
+             'B25044_010E',#No vehicle available for rented units
+             #-> household median income
+             'B19013_001E',#median income for household
+             #-> poverty rate
+             'B17017_002E',#Income in the past 12 months below poverty level
+              #-> labor force participation rate
+             'B23025_001E',#Population 16 years and over
+             'B23025_002E',#In labor force
+             #-> employment rate
+             'B23025_003E',#Civilian labor force
+             'B23025_004E')#population employed
+
 ```
 
-## SLD data
+
+```{r acs2017}
+#get 2017 data
+acs.2017 <- get_acs(geography = "block group",
+                    year = 2017,
+                    variables = acs.var,
+                    geometry = TRUE,
+                    survey = "acs5",
+                    state = "MA",
+                    output = "wide")%>%
+  st_transform(crs = 2249) %>%
+  select(GEOID, NAME, all_of(acs.var)) %>%
+  rename(pop.tot = B01001_001E,
+         pop.white = B03002_003E, 
+         
+         com.tot = B08301_001E, 
+         com.car = B08301_002E, 
+         com.bus = B08301_011E, 
+         com.sub = B08301_012E, 
+         com.rail = B08301_013E, 
+         com.trolley = B08301_014E, 
+         com.bike = B08301_018E,
+         com.home = B08301_021E,
+      
+         hh.tot = B25044_001E,
+         hh.noveh.own = B25044_003E,
+         hh.noveh.rent = B25044_010E,
+        
+         medInc = B19013_001E,
+        
+         hh.pover = B17017_002E,
+       
+         pop.16 = B23025_001E, 
+         pop.labor = B23025_002E, 
+        
+         pop.civil = B23025_003E,
+         pop.emp = B23025_004E)%>%
+  mutate(area = st_area(.)) %>%
+  mutate(area = set_units(x = area, value = "acres"))%>%
+  left_join(job.2017, by = c('GEOID'='w_bg'))%>% #join job data
+  mutate(pop.den = round(ifelse(as.numeric(area) > 0, pop.tot / area, 0),digits = 2),
+         hh.den = round(ifelse(as.numeric(area) > 0, hh.tot / area, 0),digits = 2),
+         commuter.tot = com.tot-com.home,
+         white.share = round(ifelse(pop.tot > 0, pop.white / pop.tot, 0) * 100, digits = 2),
+         car.share = round(ifelse(com.tot > 0, com.car / (com.tot-com.home), 0)*100, digits = 2),
+         bus.share = round(ifelse(com.tot > 0, com.bus / (com.tot-com.home), 0)*100, digits = 2),
+         sub.share = round(ifelse(com.tot > 0, com.sub / (com.tot-com.home), 0)*100, digits = 2),
+         rail.share = round(ifelse(com.tot > 0, com.rail / (com.tot-com.home), 0)*100, digits = 2),
+         tro.share = round(ifelse(com.tot > 0, com.trolley / (com.tot-com.home), 0)*100, digits = 2),
+         bike.share = round(ifelse(com.tot > 0, com.bike / (com.tot-com.home), 0)*100, digits = 2),
+         car.share = round(ifelse(com.tot > 0, com.car / (com.tot-com.home), 0)*100, digits = 2),
+         tran.share = round(ifelse(com.tot > 0, (com.sub+com.rail+com.trolley) / (com.tot-com.home), 0)*100, digits = 2),
+         veh.ownership = round(ifelse(hh.tot > 0, (hh.noveh.own+hh.noveh.rent) / hh.tot, 0)*100, digits = 2),
+         pover.rate = round(ifelse(hh.tot > 0, hh.pover / hh.tot, 0)*100, digits = 2),
+         labor.rate = round(ifelse(pop.16 > 0, pop.labor / pop.16, 0)*100, digits = 2),
+         employ.rate = round(ifelse(pop.civil > 0, pop.emp / pop.civil, 0)*100, digits = 2),
+         job.den = round(ifelse(as.numeric(area) > 0, job / area, 0),digits = 2))%>%
+  select(GEOID,NAME,
+         pop.tot,pop.den,
+         commuter.tot,hh.tot,hh.den,
+         job,job.den,
+         white.share,
+         car.share,bus.share,sub.share,rail.share,tro.share,bike.share,tran.share,
+         veh.ownership,
+         medInc, pover.rate,
+         labor.rate,employ.rate)
+```
 
 
-```{r SLD_subset}
+
+```{r acs2019}
+#get 2019 data
+acs.2019 <- get_acs(geography = "block group",
+                    year = 2019,
+                    variables = acs.var,
+                    geometry = TRUE,
+                    survey = "acs5",
+                    state = "MA",
+                    output = "wide")%>%
+  st_transform(crs = 2249) %>%
+  select(GEOID, NAME, all_of(acs.var)) %>%
+  rename(pop.tot = B01001_001E,
+         pop.white = B03002_003E, 
+         
+         com.tot = B08301_001E, 
+         com.car = B08301_002E, 
+         com.bus = B08301_011E, 
+         com.sub = B08301_012E, 
+         com.rail = B08301_013E, 
+         com.trolley = B08301_014E, 
+         com.bike = B08301_018E,
+         com.home = B08301_021E,
+      
+         hh.tot = B25044_001E,
+         hh.noveh.own = B25044_003E,
+         hh.noveh.rent = B25044_010E,
+        
+         medInc = B19013_001E,
+        
+         hh.pover = B17017_002E,
+       
+         pop.16 = B23025_001E, 
+         pop.labor = B23025_002E, 
+        
+         pop.civil = B23025_003E,
+         pop.emp = B23025_004E)%>%
+  mutate(area = st_area(.)) %>%
+  mutate(area = set_units(x = area, value = "acres"))%>%
+  left_join(job.2019, by = c('GEOID'='w_bg'))%>% #join job data
+  mutate(pop.den = round(ifelse(as.numeric(area) > 0, pop.tot / area, 0),digits = 2),
+         hh.den = round(ifelse(as.numeric(area) > 0, hh.tot / area, 0),digits = 2),
+         commuter.tot = com.tot-com.home,
+         white.share = round(ifelse(pop.tot > 0, pop.white / pop.tot, 0) * 100, digits = 2),
+         car.share = round(ifelse(com.tot > 0, com.car / (com.tot-com.home), 0)*100, digits = 2),
+         bus.share = round(ifelse(com.tot > 0, com.bus / (com.tot-com.home), 0)*100, digits = 2),
+         sub.share = round(ifelse(com.tot > 0, com.sub / (com.tot-com.home), 0)*100, digits = 2),
+         rail.share = round(ifelse(com.tot > 0, com.rail / (com.tot-com.home), 0)*100, digits = 2),
+         tro.share = round(ifelse(com.tot > 0, com.trolley / (com.tot-com.home), 0)*100, digits = 2),
+         bike.share = round(ifelse(com.tot > 0, com.bike / (com.tot-com.home), 0)*100, digits = 2),
+         car.share = round(ifelse(com.tot > 0, com.car / (com.tot-com.home), 0)*100, digits = 2),
+         tran.share = round(ifelse(com.tot > 0, (com.sub+com.rail+com.trolley) / (com.tot-com.home), 0)*100, digits = 2),
+         veh.ownership = round(ifelse(hh.tot > 0, (hh.noveh.own+hh.noveh.rent) / hh.tot, 0)*100, digits = 2),
+         pover.rate = round(ifelse(hh.tot > 0, hh.pover / hh.tot, 0)*100, digits = 2),
+         labor.rate = round(ifelse(pop.16 > 0, pop.labor / pop.16, 0)*100, digits = 2),
+         employ.rate = round(ifelse(pop.civil > 0, pop.emp / pop.civil, 0)*100, digits = 2),
+         job.den = round(ifelse(as.numeric(area) > 0, job / area, 0),digits = 2))%>%
+  select(GEOID,NAME,
+         pop.tot,pop.den,
+         commuter.tot,hh.tot,hh.den,
+         job,job.den,
+         white.share,
+         car.share,bus.share,sub.share,rail.share,tro.share,bike.share,tran.share,
+         veh.ownership,
+         medInc, pover.rate,
+         labor.rate,employ.rate)
+```
+
+
+```{r acs-join}
 # stop buffer 1/4 mile = 1320 feet
 tran_stop <- st_transform(tran_stop, crs = 'EPSG:2249')
 tran_stop_buffer <- st_buffer(x = tran_stop, dist = 1320)
-
-sld_layers <- st_layers("/Users/Viva Wan/Documents/GitHub/Local/505PBN/SmartLocationDatabaseV3/SmartLocationDatabase.gdb")
-
-sld <- st_read("/Users/Viva Wan/Documents/GitHub/Local/505PBN/SmartLocationDatabaseV3/SmartLocationDatabase.gdb")
-
-# subset to boston CBSA
-sld <- sld %>%
-  filter(CBSA_Name == "Boston-Cambridge-Newton, MA-NH")%>%
-  st_transform(crs = 'EPSG:2249')
-
-# subset to station area
-## stop buffer 1/4 mile = 1320 feet
-tran_stop <- st_transform(tran_stop, crs = 'EPSG:2249')
-tran_stop_buffer <- st_buffer(x = tran_stop, dist = 1320)
-sld <- sld[tran_stop_buffer,]
 
 # map
 tm_shape(sld) +
@@ -518,32 +694,6 @@ tm_shape(tran_stop) +
    tm_dots(col = "black", size = .1) +
 tm_layout(frame = FALSE)
 ```
-
-**Built Environment Variables**
-- Housing density 
-- Population density 
-- Employment density 
-- Employment mix
-- Street network connectivity 
-- Centrality
-
-
-## Sociodemographic Data
-
-```{r}
-# Demographic Data
-## Load Census Tract Data
-census_api_key("3ec2bee8c227ff3f9df970d0ffbb11ee1384076e", install = TRUE, overwrite = TRUE)
-
-acs_variable_list.2017 <- load_variables(2017, # Year
-                                         "acs5", # Five year ACS estimates
-                                         cache = TRUE)
-
-acs_variable_list.2019 <- load_variables(2019, # Year
-                                         "acs5", # Five year ACS estimates
-                                         cache = TRUE)
-```
-
 
 # Data Visualization
 
