--- a/script/Final_Viva-Yaohan.Rmd
+++ b/script/Final_Viva-Yaohan.Rmd
@@ -922,12 +922,15 @@ final_19_total_acs.buffer <- final_19_total_bike %>%
 ## Simple Regression
 
 ```{r step1}
+rm(list = setdiff(ls(), c("final_17_total_acs.dot", "final_17_total_acs.buffer",
+                          "final_19_total_acs.dot", "final_19_total_acs.buffer")))
+
 ## 2017
-mod1 <- lm(total_rider_tran ~ total_rider_bike, data = final_17_total)
+mod1 <- lm(total_rider_tran ~ total_rider_bike, data = final_17_total_acs.dot)
 summary(mod1)
 
 ## 2019
-mod2 <- lm(total_rider_tran ~ total_rider_bike, data = final_19_total)
+mod2 <- lm(total_rider_tran ~ total_rider_bike, data = final_19_total_acs.dot)
 summary(mod2)
 ```
 
@@ -935,11 +938,19 @@ summary(mod2)
 
 ```{r step2}
 ## 2017
+mod3 <- lm(total_rider_tran ~ .-tran_stop, data = final_17_total_acs.dot)
+summary(mod3)
 
+mod4 <- lm(total_rider_tran ~ .-tran_stop, data = final_17_total_acs.buffer)
+summary(mod4)
 
 ## 2019
+mod5 <- lm(total_rider_tran ~ .-tran_stop, data = final_19_total_acs.dot)
+summary(mod5)
+vif(mod5)
 
-
+mod6 <- lm(total_rider_tran ~ .-tran_stop, data = final_19_total_acs.buffer)
+summary(mod6)
 ```
 
 ## Multiple Regression with Time Period
