--- a/script/Final_Viva-Yaohan.Rmd
+++ b/script/Final_Viva-Yaohan.Rmd
@@ -46,6 +46,7 @@ conflicts_prefer(dplyr::select)
 conflicts_prefer(dplyr::filter)
 conflicts_prefer(dplyr::recode)
 conflicts_prefer(sf::st_crs)
+conflicts_prefer(corrr::correlate)
 ```
 
 
@@ -780,6 +781,87 @@ acs.2019.stop.buffer <- tran_stop %>%
 
 # Data Visualization
 
+## correlation plot
+```{r dot cor, warning=FALSE, message=FALSE}
+##2 017 acs dot
+# Select only numeric variables and remove rows with missing values
+numericVars <- final_17_total_acs.dot %>%
+  select_if(is.numeric) %>%  # Select only numeric variables
+  na.omit()  # Remove rows with missing values
+
+## built environment
+numericVars1<-numericVars%>%
+  select(total_rider_tran, total_rider_bike,total_docks,bus_stop,pop.tot,pop.den,
+         commuter.tot,hh.tot,hh.den, job, job.den)
+ggpairs(numericVars1)
+#-> 
+
+## socialecnomic
+numericVars2<-numericVars%>%
+  select(total_rider_tran, total_rider_bike,bus_stop,pop.den,
+         commuter.tot,job.den, white.share, veh.ownership, medInc,pover.rate,labor.rate,employ.rate,tran.share)
+ggpairs(numericVars2)
+#-> 
+
+## results of initial variable selection
+numericVars3<-numericVars%>%
+  select(total_rider_tran, total_rider_bike,bus_stop,pop.den,
+         commuter.tot,job.den, white.share, veh.ownership, medInc, employ.rate,tran.share
+         )
+ggpairs(numericVars3)
+
+## add log
+numericVars4 <- numericVars3%>%
+  mutate(log_rider_tran = log(total_rider_tran+1),
+         log_rider_bike = log(total_rider_bike+1),
+         log_job_den = log(job.den+1))%>%
+  select(-total_rider_tran, -total_rider_bike, -job.den)
+ggpairs(numericVars4)
+
+```
+
+```{r buffer cor, warning=FALSE, message=FALSE}
+## 2017 acs dot
+# Select only numeric variables and remove rows with missing values
+numericVars.buf <- final_17_total_acs.buffer %>%
+  select_if(is.numeric) %>%  # Select only numeric variables
+  na.omit()  # Remove rows with missing values
+
+## built environment
+numericVars.buf1<-numericVars%>%
+  select(total_rider_tran, total_rider_bike,total_docks,bus_stop,pop.all,ave.pop.den,
+         commuter.all,hh.all,ave.hh.den, job.all, ave.job.den)
+ggpairs(numericVars.buf1)
+#-> 
+
+## socialecnomic
+numericVars.buf2<-numericVars%>%
+  select(total_rider_tran, total_rider_bike,bus_stop,ave.pop.den,
+         commuter.all,ave.job.den, ave.white.share, ave.veh.ownership,
+         ave.pover.rate,ave.labor.rate,ave.employ.rate,ave.tran.share)
+ggpairs(numericVars.buf2)
+#-> 
+
+## results of initial variable selection
+numericVars3<-numericVars%>%
+  select(total_rider_tran, total_rider_bike,bus_stop,pop.den,
+         commuter.tot,job.den, white.share, veh.ownership, medInc, employ.rate,tran.share
+         )
+ggpairs(numericVars3)
+
+## add log
+numericVars4 <- numericVars3%>%
+  mutate(log_rider_tran = log(total_rider_tran+1),
+         log_rider_bike = log(total_rider_bike+1),
+         log_job_den = log(job. den+1))%>%
+  select(-total_rider_tran, -total_rider_bike, -job.den)
+ggpairs(numericVars4)
+
+```
+
+
+
+
 ## Transit Data
 
 ```{r tran_map}
@@ -934,6 +1016,14 @@ modb.0 <- lm(total_rider_tran ~ total_rider_bike, data = final_19_total_acs.dot)
 summary(modb.0)
 ```
 
+```{r acs buffer}
+
+modb.0 <- lm(total_rider_tran ~ total_rider_bike, data = final_19_total_acs.dot)
+summary(modb.0)
+```
+
+
+
 ## Multiple Regression without Time Period
 
 ```{r step2}
@@ -945,9 +1035,13 @@ moda.2 <- lm(total_rider_tran ~ .-tran_stop, data = final_17_total_acs.buffer)
 summary(moda.2)
 
 ## 2019
-modb.1 <- lm(total_rider_tran ~ .-tran_stop, data = final_19_total_acs.dot)
+modb.1 <- lm(log(total_rider_tran) ~ bike, data = final_19_total_acs.dot)
 summary(modb.1)
 vif(modb.1)
+
+
+
+
 
 modb.2 <- lm(total_rider_tran ~ .-tran_stop, data = final_19_total_acs.buffer)
 summary(modb.2)
